tests/checker/fail/free_function_ordering_violation.can
zebra = () -> Unit {
    "z".print()
}

apple = () -> Unit {
    "a".print()
}

main = () -> Unit {
    "ok".print()
}
